--- a/inventory/templates/inventory/item_list_table.html
+++ b/inventory/templates/inventory/item_list_table.html
@@ -19,6 +19,6 @@
 </tr>
 {% empty %}
 <tr>
-    <td colspan="4" class="text-center">Brak wyników dla podanych kryteriów.</td>
+    <td colspan="9">Brak wyników dla podanych kryteriów.</td>
 </tr>
 {% endfor %}
