--- a/inventory/templates/inventory/order_list_table.html
+++ b/inventory/templates/inventory/order_list_table.html
@@ -16,6 +16,6 @@
 </tr>
 {% empty %}
 <tr>
-    <td colspan="6" class="text-center">Brak zamówień.</td>
+    <td colspan="6" class="text-center">Brak wyników dla podanych kryteriów.</td>
 </tr>
 {% endfor %}
