--- a/inventory/templates/inventory/supplier_list_table.html
+++ b/inventory/templates/inventory/supplier_list_table.html
@@ -16,6 +16,6 @@
 </tr>
 {% empty %}
 <tr>
-    <td colspan="6">Brak dostawców.</td>
+    <td colspan="6">Brak wyników dla podanych kryteriów.</td>
 </tr>
 {% endfor %}
